--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "2.9.4",
     "core-js": "^3.6.5",
+    "echarts": "^5.1.2",
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
+    "vue-chartjs": "^3.5.1",
+    "vue-echarts": "^6.0.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -18,10 +22,11 @@
     "@vue/cli-plugin-eslint": "^4.5.13",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/composition-api": "^1.1.1",
     "@vue/eslint-config-standard": "^5.1.2",
     "babel-eslint": "^10.1.0",
     "babel-plugin-component": "^1.1.1",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
@@ -29,6 +34,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "prettier-eslint": "^13.0.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-element": "~1.0.1",
     "vue-template-compiler": "^2.6.11"
