--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "prettier": "2.3.2",
     "prettier-eslint": "^13.0.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-element": "~1.0.1",
